--- a/src/Topshelf.Unity.Sample/packages.config
+++ b/src/Topshelf.Unity.Sample/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="Topshelf" version="3.1.4" targetFramework="net40" />
+  <package id="Topshelf.Unity" version="0.1.0" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net40" />
 </packages>
