--- a/src/Topshelf.Unity/Topshelf.Unity.nuspec
+++ b/src/Topshelf.Unity/Topshelf.Unity.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Topshelf.Unity</id>
-    <version>0.1.0</version>
+    <version>2.0.0</version>
     <title>Topshelf.Unity</title>
     <authors>Alexandr Nikitin</authors>
     <owners>qwesoftware</owners>
@@ -11,11 +11,11 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Topshelf.Unity provides extensions to construct your service class from your Unity IoC container.</description>
     <releaseNotes>Initial release</releaseNotes>
-    <copyright>© 2014 Alexandr Nikitin.  All rights reserved.</copyright>
+    <copyright>© 2014-2015 Alexandr Nikitin.  All rights reserved.</copyright>
     <tags>Topshelf Unity</tags>
     <dependencies>
-      <dependency id="Unity" version="2.0.0" />
-      <dependency id="TopShelf" version="3.0.0" />
+      <dependency id="Unity" version="4.0.0" />
+      <dependency id="TopShelf" version="3.2.0" />
     </dependencies>
   </metadata>
 </package>
