--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,6 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /Topshelf.Unity.sln.GhostDoc.xml
+
+# Visual Studio 2015 cache/options directory
+.vs/
