Sign the assembly

--- a/src/Topshelf.Unity/Topshelf.Unity.csproj
+++ b/src/Topshelf.Unity/Topshelf.Unity.csproj
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>StrongNameKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,6 +66,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="StrongNameKey.snk" />
     <None Include="Topshelf.Unity.nuspec">
       <SubType>Designer</SubType>
     </None>
